# parallel_computing

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
lab1/: CMakeLists.txt  extract-files-main.cpp  make-archive-main.cpp
lab1/include/: Process.hpp  ProcessManager.hpp
lab1/src/: Process.cpp  ProcessManager.cpp
lab2/: CMakeLists.txt  LifeGame.hpp  LifeIO.hpp  Window.hpp  life-main.cpp
lab3/: BankTests.cpp  CMakeLists.txt  economy-simulation-main.cpp
lab3/Bank/: Actors.hpp  Bank.cpp  Bank.hpp  Settings.hpp
lab5/: CMakeLists.txt  StreamingTVTests.cpp  streaming-tv-main.cpp
lab5/include/: AudioCapturer.hpp  Common.hpp  Receiver.hpp  Station.hpp  VideoCapturer.hpp
lab6/: CMakeLists.txt  histogram-bench-main.cpp
lab6/common/include/: Types.hpp
lab8/: CMakeLists.txt  coro-generator-main.cpp  my-awaiter.cpp  my-task-main.cpp
lab8/common/include/: Awaiter.hpp  Task.hpp
lab9/: CMakeLists.txt  particle-simulation-main.cpp
lab9/common/include/: Application.hpp  Console.hpp  OpenCL.hpp  PhysicsConfig.hpp  PhysicsEngine.hpp  RenderSystem.hpp
lab9/common/src/: Console.cpp  PhysicsEngine.cpp  RenderSystem.cpp
